--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable (drnsf
 	src/edit_mode.cc
 	src/edit_window.cc
 	src/edit_mode_classic.cc
+	src/edit_mode_imdemo.cc
 
 	src/transact.hh
 	src/transact_teller.cc
