--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_executable (drnsf
 	src/misc.hh
 
 	src/nsf.hh
+	src/nsf_archive.cc
 	src/nsf_spage.cc
 	src/nsf_raw_entry.cc
 	src/nsf_wgeo_v2.cc
