[prep] pull im_canvas code to new cc file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable (drnsf
 	src/gui.hh
 	src/gui_window.cc
 	src/gui_gl_canvas.cc
+	src/gui_im_canvas.cc
 	src/gui_im_window.cc
 	src/gui_im.cc
 
