--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable (drnsf
 
 	src/gui.hh
 	src/gui_window.cc
+	src/gui_label.cc
 	src/gui_tabview.cc
 	src/gui_splitview.cc
 	src/gui_gl_canvas.cc
