[prep] gui::im_canvas -> edit::im_canvas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,10 +44,10 @@ add_executable (drnsf
 	src/gui_tabview.cc
 	src/gui_splitview.cc
 	src/gui_gl_canvas.cc
-	src/gui_im_canvas.cc
 	src/gui_im.cc
 
 	src/edit.hh
+	src/edit_im_canvas.cc
 	src/edit_editor.cc
 	src/edit_pane.cc
 	src/edit_core.cc
