--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable (drnsf
 	src/gl.hh
 	src/gl_machine.cc
 	src/gl_attrib.cc
+	src/gl_uniform.cc
 	src/gl_shader.cc
 	src/gl_program.cc
 	src/gl_buffer.cc
