[prep] edit::window -> edit::main_view

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,11 +62,11 @@ add_executable (drnsf
 	src/edit_pane.cc
 	src/edit_core.cc
 	src/edit_mode.cc
-	src/edit_window.cc
 	src/edit_mode_classic.cc
 	src/edit_mode_imdemo.cc
 	src/edit_classic_view.cc
 	src/edit_visual_view.cc
+	src/edit_main_view.cc
 
 	src/transact.hh
 	src/transact_teller.cc
