--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable (drnsf
 	src/gui_label.cc
 	src/gui_tabview.cc
 	src/gui_splitview.cc
+	src/gui_treeview.cc
 	src/gui_gl_canvas.cc
 	src/gui_im.cc
 
