--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable (drnsf
 	src/util_binreader.cc
 
 	src/gui.hh
+	src/gui_widget.cc
 	src/gui_window.cc
 	src/gui_label.cc
 	src/gui_tabview.cc
