--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_executable (drnsf
 	src/render_viewport.cc
 	src/render_figure.cc
 	src/render_reticle_fig.cc
+	src/render_meshframe_fig.cc
 
 	src/edit.hh
 	src/edit_asset_editor.cc
