--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable (drnsf
     src/gui.hh
     src/gui_widget.cc
     src/gui_window.cc
+    src/gui_composite.cc
     src/gui_label.cc
     src/gui_tabview.cc
     src/gui_splitview.cc
