[prep] Add widget_2d; change gui::label to a 2d widget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable (drnsf
     src/gui_window.cc
     src/gui_composite.cc
     src/gui_widget_gl.cc
+    src/gui_widget_2d.cc
     src/gui_label.cc
     src/gui_treeview.cc
     src/gui_gl_canvas.cc
