[prep] new menubar code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,12 +42,15 @@ add_executable (drnsf
     src/gui.cc
     src/gui_widget.cc
     src/gui_window.cc
+    src/gui_popup.cc
     src/gui_composite.cc
     src/gui_widget_gl.cc
     src/gui_widget_2d.cc
     src/gui_widget_im.cc
     src/gui_label.cc
     src/gui_treeview.cc
+    src/gui_menu2.cc
+    src/gui_menubar.cc
     src/gui_gl_canvas.cc
     src/gui_menu.cc
     src/gui_menu_item.cc
