[prep] add new edit::editor class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ add_executable (drnsf
     src/render_meshframe_fig.cc
 
     src/edit.hh
+    src/edit_editor2.cc
     src/edit_asset_editor.cc
     src/edit_asset_tree.cc
     src/edit_asset_infoview.cc
