[prep] rename gui::menu2 -> gui::menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ add_executable (drnsf
     src/gui_widget_im.cc
     src/gui_label.cc
     src/gui_treeview.cc
-    src/gui_menu2.cc
+    src/gui_menu.cc
     src/gui_menubar.cc
     src/gui_gl_canvas.cc
     src/gui_im.cc
