[prep] editor -> context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ add_executable (drnsf
     src/render_meshframe_fig.cc
 
     src/edit.hh
-    src/edit_editor2.cc
+    src/edit_context.cc
     src/edit_menus.cc
     src/edit_asset_editor.cc
     src/edit_asset_tree.cc
