[prep] beginning new asset prop editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,10 +71,10 @@ add_executable (drnsf
     src/edit.hh
     src/edit_context.cc
     src/edit_menus.cc
+    src/edit_asset_propctl.cc
     src/edit_asset_editor.cc
     src/edit_asset_tree.cc
     src/edit_asset_infoview.cc
-    src/edit_asset_propview.cc
     src/edit_asset_viewport.cc
     src/edit_main_window.cc
     src/edit_im_canvas.cc
