--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ add_executable (drnsf
     src/edit.hh
     src/edit_context.cc
     src/edit_menus.cc
+    src/edit_asset_metactl.cc
     src/edit_asset_propctl.cc
     src/edit_asset_editor.cc
     src/edit_asset_tree.cc
