[prep] USE_GL macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,9 +135,11 @@ set_property (CACHE FRONTEND PROPERTY STRINGS
 if (FRONTEND STREQUAL X11)
     set (USE_GUI ON)
     set (USE_X11 ON)
+    set (USE_GL ON)
 elseif (FRONTEND STREQUAL WINAPI)
     set (USE_GUI ON)
     set (USE_WINAPI ON)
+    set (USE_GL ON)
 else ()
     message (FATAL_ERROR "Unrecognized FRONTEND value: ${FRONTEND}")
 endif ()
