[prep] initial work for edit::asset_viewctl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ add_executable (drnsf
     src/edit_context.cc
     src/edit_menus.cc
     src/edit_asset_metactl.cc
+    src/edit_asset_viewctl.cc
     src/edit_asset_propctl.cc
     src/edit_asset_editor.cc
     src/edit_asset_tree.cc
