[prep] beginning of render::frameonly_fig

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ add_executable (drnsf
     src/render_viewport.cc
     src/render_figure.cc
     src/render_reticle_fig.cc
+    src/render_frameonly_fig.cc
     src/render_meshframe_fig.cc
 
     src/edit.hh
