Fix 'cairo-x11' pkg-config entry in CMakeLists
Commit 942e72 introduces a breaking change to the CMakeLists.txt build
file. The pkg-config module name 'cairo-x11', which does not exist under
a standard Cairo installation, was incorrectly used in place of the name
'cairo-xlib'.

This issue had been missed as existing CMake build trees created prior
to the breaking change could continue operating after the change without
error due to internally cached build settings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,7 +156,7 @@ find_package (PkgConfig REQUIRED)
 
 # Dependency: cairo
 if (USE_X11)
-    pkg_search_module (CAIRO REQUIRED cairo-x11 IMPORTED_TARGET)
+    pkg_search_module (CAIRO REQUIRED cairo-xlib IMPORTED_TARGET)
     target_link_libraries (drnsf PRIVATE PkgConfig::CAIRO)
 endif ()
 
