Disable googletest's static runtime hack
By default, the CMake scripts for Google Test change MSVC compiler flags
to use non-DLL (static) runtimes. This results in linker errors while
building DRNSF, as DRNSF uses DLL runtimes by default.

This change fixes the issue by disabling that feature. A developer can
still use static runtimes by changing the configuration on each project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,6 +210,12 @@ if (FEATURE_INTERNAL_TEST)
         "Install googlemock when installing drnsf."
         FORCE
     )
+    if (MSVC)
+        set (gtest_force_shared_crt ON CACHE INTERNAL
+            "Use non-DLL runtime for googletest."
+            FORCE
+        )
+    endif ()
     add_subdirectory (googletest)
     target_link_libraries (drnsf PRIVATE gtest)
 endif()
