Add 'STATIC_MSVC_RUNTIME' build option
By default, MSVC appears to link against the shared DLL versions of the
MSVC runtime. This behavior may be undesirable for some users, as the
resulting executable will depend on installation of the Visual C++
Redistributable Package for whatever version of MSVC was used when
building DRNSF.

This change adds a CMake build option which, when enabled, changes
compiler flags to link against the appropriate MSVC static runtime. This
option is disabled by default, preserving the previous default behavior.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,24 @@ if (WIN32)
     endif ()
 endif ()
 
+# Option: STATIC_MSVC_RUNTIME
+if (MSVC)
+    set (STATIC_MSVC_RUNTIME OFF CACHE BOOL
+    "Build DRNSF and its dependencies against static MSVC runtimes."
+    )
+    if (STATIC_MSVC_RUNTIME)
+        foreach (fvar IN ITEMS
+            CMAKE_CXX_FLAGS
+            CMAKE_CXX_FLAGS_DEBUG
+            CMAKE_CXX_FLAGS_RELEASE
+            CMAKE_CXX_FLAGS_MINSIZEREL
+            CMAKE_CXX_FLAGS_RELWITHDEBINFO
+        )
+            string (REPLACE "/MD" "/MT" ${fvar} "${${fvar}}")
+        endforeach ()
+    endif ()
+endif ()
+
 add_library (imgui OBJECT
     imgui/imgui.h
     imgui/imconfig.h
