--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,10 +48,10 @@ after_build:
   - copy ..\extra\autodep_licenses\libpng.txt pkg\lib_licenses\libpng.txt
   - copy ..\extra\autodep_licenses\zlib.txt pkg\lib_licenses\zlib.txt
   - 7z a drnsf.7z .\pkg\*
-  - move drnsf.7z ..\drnsf-%APPVEYOR_REPO_COMMIT%-%PLATFORM%-%CONFIGURATION%.7z
+  - move drnsf.7z ..\drnsf-%APPVEYOR_BUILD_NUMBER%-%APPVEYOR_REPO_COMMIT%-%PLATFORM%-%CONFIGURATION%.7z
 test: off
 artifacts:
-  - path: drnsf-$(APPVEYOR_REPO_COMMIT)-$(PLATFORM)-$(CONFIGURATION).7z
+  - path: drnsf-$(APPVEYOR_BUILD_NUMBER)-$(APPVEYOR_REPO_COMMIT)-$(PLATFORM)-$(CONFIGURATION).7z
     name: DRNSF-FULL7Z
 deploy:
   - provider: S3
