Add CMake testing using 'internal-test'
The README file already indicates that testing with the CMake makefile
generator may be done using 'make test', however this was not actually
supported. This change adds support for 'make test' to match the
documentation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,10 @@ endif ()
 set (FEATURE_INTERNAL_TEST ON CACHE BOOL
     "Enable the internal-test command. (requires googletest)"
 )
+if (FEATURE_INTERNAL_TEST)
+    enable_testing ()
+    add_test (NAME internal_test COMMAND drnsf ":internal-test")
+endif ()
 
 # Dependency: pkg-config
 find_package (PkgConfig REQUIRED)
