core: Add dump-gl subcommand
This subcommand is intended to assist with debugging end-user issues
with OpenGL. The command dumps the same information as provided to
STDERR by the normal gl::error exception handler, but does so to STDOUT
instead.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ add_executable (drnsf
     src/cmd_internal_test.cc
     src/cmd_resave_test.cc
     src/cmd_cdxa_imprint.cc
+    src/cmd_dump_gl.cc
 
     src/util.hh
     src/util.cc
