Implement native file dialogs for WINAPI
The `get_dir' and `set_dir' methods have been left as stubs with TODO
comments; they are not currently called by any code.

A new build option, "FEATURE_NATIVE_FILE_DIALOG", has been added to
control whether or not to use these dialogs. By default, it is enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ elseif (FRONTEND STREQUAL WINAPI)
     set (USE_GUI ON)
     set (USE_WINAPI ON)
     set (USE_GL ON)
+    set (CAN_USE_NATIVE_FILE_DIALOG ON)
 else ()
     message (FATAL_ERROR "Unrecognized FRONTEND value: ${FRONTEND}")
 endif ()
@@ -54,6 +55,18 @@ if (FEATURE_INTERNAL_TEST)
     enable_testing ()
     add_test (NAME internal_test COMMAND drnsf ":internal-test")
 endif ()
+
+function (forward_native_feature name)
+    if (FEATURE_NATIVE_${name} AND CAN_USE_NATIVE_${name})
+        set (USE_NATIVE_${name} ON PARENT_SCOPE)
+    endif ()
+endfunction (forward_native_feature)
+
+# Option: FEATURE_NATIVE_FILE_DIALOG
+set (FEATURE_NATIVE_FILE_DIALOG ON CACHE BOOL
+    "Use native file open and save dialogs (if available)."
+)
+forward_native_feature (FILE_DIALOG)
 
 # Option: AUTOMATIC_DEPS
 if (WIN32)
@@ -132,6 +145,9 @@ add_executable (drnsf
     src/gui_menubar.cc
     src/gui_file_dialog.cc
     src/gui_im.cc
+    $<$<BOOL:${USE_WINAPI}>:
+        src/frontend/winapi/gui_file_dialog.cc
+    >
 
     src/gl.hh
     src/gl.cc
@@ -190,6 +206,7 @@ add_executable (drnsf
 
     src/embed_data.cc
 )
+target_include_directories (drnsf PRIVATE "${CMAKE_SOURCE_DIR}/src")
 set_property (DIRECTORY PROPERTY VS_STARTUP_PROJECT drnsf)
 
 # Enable C++17
