gui: Move update timing logic into new class
The timing code has been moved into a new 'util::stopwatch' class. The
main gui loop is still responsible for calling 'update' on each widget,
however the responsibility for determining how much time has passed has
been shifted to the widgets themselves, which can now use the stopwatch.

This change allows widgets (or other stopwatch users) to perform
time-based updates outside of their respective 'update' methods if
necessary.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ add_executable (drnsf
     src/util_binreader.cc
     src/util_binwriter.cc
     src/util_file.cc
+    src/util_stopwatch.cc
 
     src/fs.hh
 
