gui: Move widget updates to new 'core::worker'
This change removes the 'widget::update' method entirely, replacing the
functionality with a new 'core::worker' abstract class. The workers are
separate from the GUI code, allowing non-GUI code to install code which
should be called routinely or at a particular interval. This also
reduces the number of objects which need to be touched during updates,
as many widgets do not require them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ add_executable (drnsf
     src/buildconfig.hh  # processed by configure_file below
 
     src/core.hh
+    src/core.cc
     src/core_main.cc
     src/core_argparser.cc
 
