nsf::eid: Move to_string to 'str()'
This change moves the implementation for the EID's non-member
'to_string' function to a new member function 'str'. The definition for
that function is placed into a new file, 'nsf_eid.c' rather than inline
in the nsf header.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,6 +191,7 @@ add_executable (drnsf
     src/misc.hh
 
     src/nsf.hh
+    src/nsf_eid.cc
     src/nsf_archive.cc
     src/nsf_spage.cc
     src/nsf_entry.cc
