edit: Add "assets" mode
This mode is identical to the existing interrim mode which provides a
tree of selectable assets on the left-hand side for the user to select
and displays information, options, and editable properties of the
selected asset on the right-hand side.

Unlike the existing interrim mode, this assets mode supports switching
between projects. This is necessary to more properly implement
New/Open/Close functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,6 +177,8 @@ add_executable (drnsf
     src/edit_asset_editor.cc
     src/edit_asset_tree.cc
     src/edit_main_window.cc
+    src/edit_mode_assets.hh
+    src/edit_mode_assets_mainctl.cc
     src/edit_mode_map.hh
     src/edit_mode_map_mainctl.cc
 
